[gd_scene load_steps=11 format=3 uid="uid://c5o6bi43j562b"]

[ext_resource type="Script" uid="uid://cmf3b5ufhosbk" path="res://scripts/entities_scripts/players_scripts/player_base.gd" id="1_rapl1"]
[ext_resource type="StyleBox" uid="uid://d2ei8dgmfqtfn" path="res://user_interfaces/user_interfaces_resources/progress_bar_style/shield_progress_bar_fill.tres" id="3_48rhk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lt4ow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3b4m"]
size = Vector2(16, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbnw6"]
size = Vector2(20, 29)

[sub_resource type="CircleShape2D" id="CircleShape2D_swviq"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lt4ow"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_48rhk"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r405m"]
size = Vector2(16, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lt4ow"]

[node name="PlayerBase" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 239
input_pickable = true
motion_mode = 1
script = ExtResource("1_rapl1")

[node name="Animation" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_lt4ow")
offset = Vector2(-0.5, -10)

[node name="MovementHitBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_n3b4m")

[node name="CombatHitBox" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CombatHitBox"]
position = Vector2(0, -11)
shape = SubResource("RectangleShape2D_fbnw6")

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_swviq")

[node name="LootableArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="LootableArea"]
shape = SubResource("CircleShape2D_lt4ow")

[node name="ActionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_48rhk")

[node name="ObstacleCheck" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_r405m")
target_position = Vector2(10, 0)
collision_mask = 46

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
z_index = 1
offset_left = -10.0
offset_top = -29.0
offset_right = 190.0
offset_bottom = -9.0
scale = Vector2(0.1, 0.1)
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ManaBar" type="ProgressBar" parent="."]
modulate = Color(0.301961, 0.301961, 1, 1)
z_index = 1
offset_left = -10.0
offset_top = 4.0
offset_right = 190.0
offset_bottom = 24.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ProgressBar" parent="."]
modulate = Color(1, 0.501961, 0, 1)
z_index = 1
offset_left = -10.0
offset_top = 6.0
offset_right = 190.0
offset_bottom = 21.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="ShieldBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -10.0
offset_top = -27.0
offset_right = 190.0
offset_bottom = -17.0
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/font_size = 8
theme_override_styles/fill = ExtResource("3_48rhk")
max_value = 200.0
value = 150.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackShape" type="ShapeCast2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_lt4ow")
target_position = Vector2(20, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[connection signal="action_state_timeout" from="." to="." method="_on_action_state_timeout"]
[connection signal="move_state_timeout" from="." to="." method="_on_main_move_state_timeout"]
[connection signal="input_event" from="CombatHitBox" to="." method="_on_combat_hit_box_input_event"]
[connection signal="mouse_entered" from="CombatHitBox" to="." method="_on_combat_hit_box_mouse_entered"]
[connection signal="mouse_exited" from="CombatHitBox" to="." method="_on_combat_hit_box_mouse_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="area_entered" from="LootableArea" to="." method="_on_lootable_area_area_entered"]
[connection signal="area_exited" from="LootableArea" to="." method="_on_lootable_area_area_exited"]
[connection signal="body_entered" from="ActionArea" to="." method="_on_action_area_body_entered"]
[connection signal="body_exited" from="ActionArea" to="." method="_on_action_area_body_exited"]
